image blurriness fixing

--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ canvas {
   position: relative;
   width: auto;
   height: auto;
+  image-rendering: crisp-edges; 
 }
 select {
   margin: auto;
